# LoTGamesServer

./: .gitignore  README.md
lot_backend/: .env  .gitignore  Cargo.toml  Rocket.toml
lot_backend/.cargo/: config.toml
lot_backend/migrations/2022-04-02-161835_create_posts/: down.sql  up.sql
lot_backend/migrations/2022-05-01-062440_create_posts/: down.sql  up.sql
lot_backend/src/: lib.rs  main.rs
lot_backend/src/constants/: message_constants.rs  mod.rs  url_constants.rs
lot_backend/src/db/: connection.rs  mod.rs  models.rs  query.rs  schema.rs
lot_backend/src/db/model/: user.rs
lot_backend/src/db/query/: auth_query.rs  mod.rs  token_query.rs  user_query.rs
lot_backend/src/model/: contract_dto.rs  mod.rs  response.rs  user_dto.rs
lot_backend/src/routes/: mod.rs  routes_error.rs  user_controller.rs  user_manage.rs
lot_backend/src/service/: user_service.rs
lot_backend/src/util/: hash_generator.rs  jwt_claims.rs  mail_system.rs  mod.rs
